[UPDATE] Correcting distortion of the thumbnail image on styles-2.

--- a/public/css/carousel-post/carousel-style-2.css
+++ b/public/css/carousel-post/carousel-style-2.css
@@ -12,20 +12,20 @@
     width: auto;
 }
 
+.owl-carousel.style-2 .item .thumbnail-image {
+    filter: brightness(0.7);
+	height: 100%;
+    width: 100%;
+}
+
+.owl-carousel.style-2 .item img{
+	height: 100%;
+	object-fit: cover;
+}
 .owl-carousel.style-2 .item:hover img{
     transform: scale(1.05);
     transition: all .3s;
 }
-
-.owl-carousel.style-2 .item img {
-    height: 100%;
-    position: absolute;
-        left: 0;
-        top: 0;
-    width: 100%;
-}
-
-
 
 .owl-carousel.style-2 .carousel-image::before {
     content: '';
